# agy-cli

./: .STATUS  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/contributing/: BRANCH-WORKFLOW.md
docs/specs/: PLAN-causal-engine.md  PLAN-plugin-integrations.md  README.md  SPEC-agy-cli-optimization.md  SPEC-agy-cli-roadmap.md  SPEC-worktree-rules.md
src/agy/: __init__.py  cli.py
src/agy/agents/: __init__.py
src/agy/core/: __init__.py  dag_compiler.py  evaluator.py
src/agy/plugins/: __init__.py  atlas.py  obsidian.py
src/agy/skills/: __init__.py
tests/: __init__.py  test_atlas_plugin.py  test_cli.py  test_dag_compiler.py  test_evaluator.py  test_obsidian_plugin.py
